<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    <variable
        name="clickHandler"
        type="com.abdelwahab.zayed.madarsofttask.view.OnClickHandler" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddDataActivity">


    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_layout_height"
        android:background="@drawable/vector_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_insert_data_header"
        style="@android:style/Widget.Holo.Light.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/insert_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_constrain_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/recycler_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView_form_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="153dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="153dp"
            android:text="@string/form_header"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeColor="@color/my_color"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorTextColor="@color/error_color"
            app:hintTextColor="@color/my_dark_color"
            app:startIconDrawable="@drawable/ic_name"
            android:textColorHint="@color/my_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_form_header">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/txt_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeColor="@color/my_color"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            android:textColorHint="@color/my_color"
            app:errorTextColor="@color/error_color"
            app:hintTextColor="@color/my_dark_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name"
            app:startIconDrawable="@drawable/adult">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/txt_age" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_job_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/my_color"
            app:boxStrokeColor="@color/my_color"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorTextColor="@color/error_color"
            app:hintTextColor="@color/my_dark_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_age"
            app:startIconDrawable="@drawable/man">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_job_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/gender_title"
            android:textColor="@color/my_color"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_job_title" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/gender_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_job_title"
            app:srcCompat="@drawable/gender" />

        <Button
            android:id="@+id/btn_save_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="@color/my_color"
            android:text="@string/btn_save"
            android:onClick="@{(v)->clickHandler.onClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_gender_title" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_gender_title"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_job_title">

            <RadioButton
                android:id="@+id/radioButton_female"
                style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/my_color"
                android:text="@string/radio_female"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButton_male"
                style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/my_color"
                android:text="@string/radio_male"
                android:textSize="12sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>