<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="showSavedDataActivity"
            type="com.abdelwahab.zayed.madarsofttask.view.ShowSavedDataActivity" />
    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.ShowSavedDataActivity">


            <View
                android:id="@+id/header_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_layout_height"
                android:background="@drawable/vector_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_home_header"
                style="@android:style/Widget.Holo.Light.TextView.SpinnerItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/home_screen_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inner_constrain_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/recycler_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/saved_data_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

                <ImageView
                    android:id="@+id/imageView_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/there_is_no_data"
                    android:src="@drawable/ic_no_have_data"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_there_is_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="132dp"
                    android:layout_marginEnd="131dp"
                    android:layout_marginBottom="96dp"
                    android:text="@string/text_there_is_no_data"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/myCoordinatorLayout"
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    android:clickable="true"
                    app:tint="@android:color/white"
                    android:src="@drawable/add_data"
                    app:rippleColor="@color/my_light_color"
                    app:backgroundTint="@color/my_color"
                    android:onClick="@{(v)->showSavedDataActivity.onClick(v)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:focusable="true" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



</layout>